# zeropool-faucet

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml
scripts/: publish-docker
src/: cache.rs  config.rs  error.rs  main.rs  near.rs  state.rs
src/clients/: mod.rs  near.rs
