[package]
name = "zeropool-faucet"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.6.1", features = ["macros"] }
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
envy = "0.4.2"
serde = "1.0.148"
tracing-subscriber = "0.3.16"
dotenv = "0.15.0"
tower-http = { version = "0.3.5", features = ["cors"] }

# near
near-jsonrpc-client = "0.4.1"
near-crypto = "0.15.0"
near-primitives = "0.15.0"
near-chain-configs = "0.15.0"
near-jsonrpc-primitives = "0.15.0"
serde_json = "1.0.96"
async-trait = "0.1.68"
